# pydantic-ai-ogx

./: .gitignore  LICENSE  README.md  pyproject.toml
examples/: library_mode.py
pydantic_ai_ogx/: __init__.py  _transport.py  provider.py
tests/: test_provider.py
