[project]
name = "pydantic-ai-ogx"
version = "0.1.0"
description = "Pydantic AI extension for ogx - the open GenAI stack"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [
    { name = "JR Boos", email = "j.robert.boos@gmail.com" }
]
keywords = ["pydantic", "ai", "ogx", "llm", "agents"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "pydantic-ai>=0.0.1",
    "openai>=1.0.0",
    "httpx>=0.25.0",
    "ogx[client]>=0.1.0",
    "ogx[starter]>=0.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.5.0",
]
all = [
    "pydantic-ai-ogx[dev]",
]

[project.urls]
Homepage = "https://github.com/yourusername/pydantic-ai-ogx"
Documentation = "https://github.com/yourusername/pydantic-ai-ogx#readme"
Repository = "https://github.com/yourusername/pydantic-ai-ogx"
Issues = "https://github.com/yourusername/pydantic-ai-ogx/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["pydantic_ai_ogx"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.black]
line-length = 100
target-version = ["py312"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
ignore = []

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
